// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createOne > create 1`] = `
{
  "createOnePost": {
    "__typename": "Post",
    "author": {
      "__typename": "User",
      "email": "residual_carroll@hotmail.fr",
      "name": "Agripina",
      "roles": [
        "ADMIN",
        "ADMIN",
        "ADMIN",
        "ADMIN",
        "USER",
        "ADMIN",
        "USER",
        "USER",
        "ADMIN",
        "ADMIN",
      ],
    },
    "authorCount": 1,
    "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "categories": [],
    "categoriesCount": 0,
    "content": "Test",
    "published": true,
    "title": "title",
  },
}
`;

exports[`createOne > create no relay 1`] = `
{
  "createOnePost": {
    "__typename": "Post",
    "authorId": "3e0bb3d0-2074-4a1e-6263-d13dd10cb0cf",
    "content": "Test",
    "published": true,
    "title": "title",
  },
}
`;
